--- a/sorteiaquiz2/src/assets/styles/global.css
+++ b/sorteiaquiz2/src/assets/styles/global.css
@@ -10,6 +10,7 @@ html {
 
 
 body {
-    background: #f0f2f5;
+    background: linear-gradient(180deg, #3C6E71 0%, rgba(255, 255, 255, 0) 100%), #284B63;
     font-family: 'Poppins', sans-serif;
+    background-repeat: no-repeat;
 }
